refactor: clean up EventsController with @ModelAttribute and auto-resolved Pageable
- Convert EventSearchCriteria from mutable @Data class to record,
  aligning with the project DTO convention
- Replace manual @RequestParam binding + sort parsing in EventsController
  with @ModelAttribute (Spring MVC binds query params automatically)
  and @PageableDefault (Spring Data resolves page/size/sort automatically)
- Migrate EventsService from @Autowired field injection to constructor
  injection via @AllArgsConstructor; update criteria accessors to
  record style (name() / status())
- Register PageableHandlerMethodArgumentResolver in EventsControllerTest
  so standalone MockMvc resolves Pageable correctly

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>